# kyc_pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dataset.yaml  docker-compose.yml  dockerignore  promptfooconfig.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd.yml  ci.yml  ci_backup.yml
config/: agents.yaml  tasks.yaml
data/: kyc_local.db  kyc_status.json
data/doc/: sample.txt
data/doc/ai-risk-register/: AISecurityRiskRegister.xlsx
data/doc/test-case/: Test-Case.xlsx
datasets/: dataset.yaml
evals/: test_toxicity_bias_hallucination-gpt-4o-mini.py  test_toxicity_bias_hallucination-gpt-5-nano.py  test_toxicity_bias_hallucination.py
postman/: KYC_Pipeline_Collection.postman_collection.json
promptfoo/: promptfooconfig.yaml
promptfoo/prompts/: decision.txt
prompts/: test_decisionAgent.txt  test_extractorAgent.txt  test_judgeAgent.txt  test_watchlistAgent.txt
script/: start-ollama.sh  stop-ollama.sh
src/kyc_pipeline/: api.py  crew.py  lambda_handler.py  main.py  models.py
src/kyc_pipeline/config/: agents.yaml  non-sg-default.yaml  tasks.yaml  template.txt
src/kyc_pipeline/router/: router.py
src/kyc_pipeline/tools/: bizrule.py  bizrules.py  emails_decision.py  notify.py  ocr.py  persist.py  rules.py  runlog.py  watchlist.py
test/: conftest.py  responsibility_samples.yaml  test_bizrule.py  test_decision_agent.py  test_emails_decision.py  test_lambda_local.py  test_llm_responsibility.py  test_notify.py  test_ocr_extract.py  test_persist.py  test_persist_runlog.py  test_toxicity_bias_hallucination.py  test_watchlist.py
test/responsibility/: dataset.yaml
