[project]
name = "kyc_pipeline"
version = "0.1.0"
description = "KYC Pipeline using crewAI"
requires-python = ">=3.13,<3.14"
dependencies = [
    "agentops>=0.4.21",
    "crewai[tools]>=0.186.1,<1.0.0",
    "deepeval>=3.3.9",
    "fastapi>=0.118.0",
    "filetype>=1.2.0",
    "openai>=1.109.1",
    "opencv-python-headless>=4.12.0.88",
    "pdfminer-six==20251107",
    "pillow>=11.3.0",
    "pydantic>=2.11.10",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.0",
    "python-magic>=0.4.27",
    "pyyaml>=6.0.3",
    "starlette==0.49.1",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]
[project.scripts]
kyc_pipeline = "kyc_pipeline.main:run"
run_crew = "kyc_pipeline.main:run"
train = "kyc_pipeline.main:train"
replay = "kyc_pipeline.main:replay"
test = "kyc_pipeline.main:test"

[project.optional-dependencies]
dev = [
    "flake8>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
